# cpp-template

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Project.cmake  README.md  compile_commands.json  flake.nix  justfile
cmake/: compiler.cmake
src/: CMakeLists.txt  lib.hpp
src/lib/: lib.cpp  lib.hpp
src/module1/: module1.cpp  module1.hpp
src/module2/: module2.cpp  module2.hpp
src/util/: util.cpp  util.hpp
test/: CMakeLists.txt  module1.cpp  module2.cpp
tests/: CMakeLists.txt
tests/lib/: test1.cpp
tests/util/: test1.cpp
tool/: CMakeLists.txt  main.cpp
