cmake_minimum_required(VERSION 3.24)

# ---- Library ----

file(GLOB SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp)
file(GLOB HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/**/*.hpp)

add_library(${TARGET_LIB} ${SOURCES})
# target_link_libraries(${TARGET_LIB} PRIVATE fmt magic_enum)
target_include_directories(
  ${TARGET_LIB} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
                     $<INSTALL_INTERFACE:include/${TARGET_LIB}>
)

if (${PROJECT_NAME}_ENABLE_INSTALL)
  install(
    TARGETS ${TARGET_LIB}
    EXPORT ${PROJECT_NAME}Config
  )
  install(
    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
    FILES_MATCHING PATTERN "*.hpp"
  )
  install(
    EXPORT ${PROJECT_NAME}Config
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
    NAMESPACE ${PROJECT_NAME}::
  )
endif()
